manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP  

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: app2-service
# spec:
#   selector:
#     app: app2
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 5005
#   type: ClusterIP  

#   ---
