manifests/app_deployments.yaml
# -----------------------
# App1 Deployment & Service
# -----------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 1   # Only on worker-node1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      nodeSelector:
        role: app1   # restrict to worker-node1
      containers:
      - name: app1-container
        image: amritjsr/app1:v1.0   # replace with your app1 image
        ports:
        - containerPort: 5000
          # hostPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP  
---
# -----------------------
# App2 Deployment & Service
# -----------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: app2
spec:
  replicas: 1   # Only on worker-node2
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      nodeSelector:
        role: app2   # restrict to worker-node2
        # role2: app2
      containers:
      - name: app2-container
        image: amritjsr/app2:v1.0   # replace with your app2 image
        ports:
        - containerPort: 5005
          # hostPort: 85

---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  selector:
    app: app2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5005
  type: ClusterIP  
---
# -----------------------
# Default Deployment & Service
# -----------------------
# apiVersion: v1
# kind: Service
# metadata:
#   name: default-service
# spec:
#   selector:
#     app: default-app
#   ports:
#     - port: 80
#       targetPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: app1.myk8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
  - host: app2.myk8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80

# # -----------------------
# # Ingress Resource
# # -----------------------
# apiVersion: v1
# kind: Service
# metadata:
#   name: ingress-nginx-controller
#   namespace: ingress-nginx
# spec:
#   type: NodePort
#   ports:
#   - name: http
#     port: 80
#     targetPort: http
#     nodePort: 80
#   - name: https
#     port: 443
#     targetPort: https
#     nodePort: 443
#   selector:
#     app.kubernetes.io/name: ingress-nginx

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: apps-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: www.myk8s.com
#     http:
#       paths:
#       - path: /app1
#         pathType: Prefix
#         backend:
#           service:
#             name: app1-service
#             port:
#               number: 80
#       - path: /app2
#         pathType: Prefix
#         backend:
#           service:
#             name: app2-service
#             port:
#               number: 80
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: default-service
#             port:
#               number: 80
